<resources>
    <string name="app_name">Email Agent</string>
    <string name="message_sender_icon">Message sender icon</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">example@example.com</string>
    <string name="hint_password">Password</string>
    <string name="title_sing_in">Sing In</string>
    <string name="title_new_email">New email</string>
    <string name="new_user">New User</string>
    <string name="title_new_email_activity">New email…</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="text">Text</string>
    <string name="subscription">Subscription</string>
    <string name="no_more_results_were_found">No more results were found</string>
    <string name="template_datetime">dd.MM.yy hh:mm</string>
    <string name="search">Search</string>
    <string name="account_name_in_app">Account name in app</string>
    <string name="accounts">Accounts</string>
</resources>
